crates/validation/tests/snapshots/transition_tests__insert_but_already_exists.snap
---
source: crates/validation/tests/transition_tests.rs
expression: errors
---
[
    Error {
        scope: test://example/catalog.yaml#/collections/the~1collection,
        error: This spec was updated while you were editing — please refresh and re-apply your changes.
        This may have been an automated system update. (expected publication ID 0000000000000000, actual 1010101010101010),
    },
    Error {
        scope: test://example/catalog.yaml#/collections/the~1derivation,
        error: This spec was updated while you were editing — please refresh and re-apply your changes.
        This may have been an automated system update. (expected publication ID 0000000000000000, actual 1010101010101010),
    },
    Error {
        scope: test://example/catalog.yaml#/tests/the~1test,
        error: This spec was updated while you were editing — please refresh and re-apply your changes.
        This may have been an automated system update. (expected publication ID 0000000000000000, actual 1010101010101010),
    },
    Error {
        scope: test://example/catalog.yaml#/captures/the~1capture,
        error: This spec was updated while you were editing — please refresh and re-apply your changes.
        This may have been an automated system update. (expected publication ID 0000000000000000, actual 1010101010101010),
    },
    Error {
        scope: test://example/catalog.yaml#/materializations/the~1materialization,
        error: This spec was updated while you were editing — please refresh and re-apply your changes.
        This may have been an automated system update. (expected publication ID 0000000000000000, actual 1010101010101010),
    },
]
