crates/validation/tests/snapshots/transition_tests__update_but_does_not_exist.snap
---
source: crates/validation/tests/transition_tests.rs
expression: errors
---
[
    Error {
        scope: test://example/catalog.yaml#/collections/the~1collection,
        error: This task was updated while you were editing — please refresh the spec and re-apply your changes.
        This may have been an automated system update. (expected publication ID 1010101010101010, actual 0000000000000000),
    },
    Error {
        scope: test://example/catalog.yaml#/collections/the~1collection/projections/FX,
        error: location /f_x is prohibited from ever existing by the schema test://example/catalog.yaml?ptr=/collections/the~1collection/schema,
    },
    Error {
        scope: test://example/catalog.yaml#/collections/the~1collection/projections/FY,
        error: location /f_y is unknown in schema test://example/catalog.yaml?ptr=/collections/the~1collection/schema,
    },
    Error {
        scope: test://example/catalog.yaml#/collections/the~1derivation,
        error: This task was updated while you were editing — please refresh the spec and re-apply your changes.
        This may have been an automated system update. (expected publication ID 1010101010101010, actual 0000000000000000),
    },
    Error {
        scope: test://example/catalog.yaml#/tests/the~1test,
        error: This task was updated while you were editing — please refresh the spec and re-apply your changes.
        This may have been an automated system update. (expected publication ID 1010101010101010, actual 0000000000000000),
    },
    Error {
        scope: test://example/catalog.yaml#/captures/the~1capture,
        error: This task was updated while you were editing — please refresh the spec and re-apply your changes.
        This may have been an automated system update. (expected publication ID 1010101010101010, actual 0000000000000000),
    },
    Error {
        scope: test://example/catalog.yaml#/materializations/the~1materialization,
        error: This task was updated while you were editing — please refresh the spec and re-apply your changes.
        This may have been an automated system update. (expected publication ID 1010101010101010, actual 0000000000000000),
    },
    Error {
        scope: test://example/catalog.yaml#/materializations/the~1materialization/bindings/0/fields/exclude/2,
        error: exclude projection does/not/exist does not exist in collection the/collection,
    },
]
