crates/validation/tests/snapshots/transition_tests__updates_with_clobbered_backfill_counter.snap
---
source: crates/validation/tests/transition_tests.rs
expression: "captures.chain(collections).chain(materializations).chain(errors).collect::<Vec<_>>()"
---
[
  [
    {
      "bindings": [
        {
          "backfill": 123,
          "resource": {
            "_meta": {
              "path": [
                "capture",
                "path"
              ]
            },
            "table": "foo"
          },
          "target": "the/collection"
        }
      ],
      "endpoint": {
        "connector": {
          "config": {
            "a": "config"
          },
          "image": "an/image"
        }
      }
    },
    [
      "restored `backfill` of resource \"capture.path\""
    ]
  ],
  [
    {
      "key": [
        "/f_one"
      ],
      "projections": {
        "F1": "/f_one",
        "F2": "/f_two",
        "FX": "/f_x"
      },
      "schema": {
        "$id": "test://example/catalog.yaml?ptr=/collections/the~1collection/schema",
        "properties": {
          "f_one": {
            "type": "integer"
          },
          "f_two": {
            "type": "string"
          },
          "f_x": false
        },
        "required": [
          "f_one",
          "f_two"
        ],
        "type": "object"
      }
    },
    [
      "removed projection FY: /f_y, which is no longer in the schema"
    ]
  ],
  [
    {
      "derive": {
        "transforms": [
          {
            "backfill": 456,
            "lambda": "select 123 as d_one, 'hello' as d_two;\n",
            "name": "fromCollection",
            "shuffle": {
              "key": [
                "/f_two"
              ]
            },
            "source": {
              "name": "the/collection"
            }
          }
        ],
        "using": {
          "sqlite": {}
        }
      },
      "key": [
        "/d_one"
      ],
      "schema": {
        "$id": "test://example/catalog.yaml?ptr=/collections/the~1derivation/schema",
        "properties": {
          "d_one": {
            "type": "integer"
          },
          "d_two": {
            "type": "string"
          }
        },
        "required": [
          "d_one",
          "d_two"
        ],
        "type": "object"
      }
    },
    [
      "restored `backfill` of transform \"fromCollection\""
    ]
  ],
  [
    {
      "bindings": [
        {
          "backfill": 789,
          "fields": {
            "recommended": true
          },
          "resource": {
            "_meta": {
              "path": [
                "table",
                "path"
              ]
            }
          },
          "source": "the/collection"
        }
      ],
      "endpoint": {
        "connector": {
          "config": {
            "a": "config"
          },
          "image": "other/image"
        }
      }
    },
    [
      "restored `backfill` of resource \"table.path\""
    ]
  ]
]
